feat: full optimize